<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_linear_layout"
        style="@style/TextAppearance.AppCompat.header_top"
        android:background="@color/black_overlay">

        <TextView
            android:id="@+id/common_header_tv"
            style="@style/TextAppearance.AppCompat.header_text"
            android:text="@string/verify_test_header" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_main_body_1_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:paddingTop="30dp"
                android:text="@string/customer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="7"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:scrollbars="vertical"
                android:layout_gravity="left"
                android:text="@string/customer_address"
                android:textColor="#000000" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:paddingTop="10dp"
                    android:text="@string/raw_data_no" />

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/date_of_test" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/certificate_no"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:paddingTop="10dp"
                    android:text="@string/raw_data_details" />

                <TextView
                    android:id="@+id/datetextview"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="@string/dae_of_test_details" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/header2_linear_layout"
        style="@style/TextAppearance.AppCompat.header_top">

        <TextView
            android:id="@+id/header2_tv"
            style="@style/TextAppearance.AppCompat.header_text"
            android:text="@string/header2_title"
            android:textSize="@dimen/header_normal_text_size"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_main_body_2_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/instrument_used" />

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/make" />

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/modle" />
            <TextView
                android:id="@+id/aerosol_generator_type_lable"
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/Aerosol_generator_type_lable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/instrumentused"
                style="@style/TextAppearance.AppCompat.header_right"
                android:paddingTop="10dp"
                android:text="@string/instrument_used_details" />

            <TextView
                android:id="@+id/make"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="@string/make_details" />

            <TextView
                android:id="@+id/modle"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="@string/modle_details" />

            <TextView
                android:id="@+id/aerosol_generator_type"
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:paddingTop="10dp"
                    android:text="@string/instrument_serial_no" />

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/calibrated" />

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/calibration_due" />

                <TextView
                    android:id="@+id/aerosol_used_lable"
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/aerosol_used_lable" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/instrumentserialno"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:paddingTop="10dp"
                    android:text="@string/instrument_serial_no_details" />

                <TextView
                    android:id="@+id/calibratedon"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="@string/calibrated_date" />

                <TextView
                    android:id="@+id/calibrationdueon"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="@string/calibration_due_on_date" />

                <TextView
                    android:id="@+id/aerosol_used"
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header3_linear_layout"
        style="@style/TextAppearance.AppCompat.header_top">

        <TextView
            android:id="@+id/header3_tv"
            style="@style/TextAppearance.AppCompat.header_text"
            android:text="@string/header3_title"
            android:textSize="@dimen/header_normal_text_size"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_main_body_3_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/test_specification" />

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/block_plant_name" />

            <TextView
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/area_of_test_label" />

            <TextView
                android:id="@+id/ahu_no_lable"
                style="@style/TextAppearance.AppCompat.header_left"
                android:text="@string/ahu_no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.6"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/testspecification"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="@string/test_specification_details" />

            <TextView
                android:id="@+id/plantname"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="@string/block_plant_details" />

            <TextView
                android:id="@+id/areaoftest"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="@string/area_of_test_label_details" />

            <TextView
                android:id="@+id/ahu_no"
                style="@style/TextAppearance.AppCompat.header_right"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:paddingTop="10dp"
                    android:text="@string/ocupancy_state" />

                <TextView
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/test_refrence" />

                <TextView
                    android:id="@+id/room_name_lable"
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/room_name" />

                <TextView
                    android:id="@+id/room_no_lable"
                    style="@style/TextAppearance.AppCompat.header_left"
                    android:text="@string/room_no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ocupancystate"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:paddingTop="10dp"
                    android:text="@string/ocupancy_state_details" />

                <TextView
                    android:id="@+id/testrefrence"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="@string/test_refrence_details" />

                <TextView
                    android:id="@+id/room_name"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="" />

                <TextView
                    android:id="@+id/room_no"
                    style="@style/TextAppearance.AppCompat.header_right"
                    android:text="" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header4_linear_layout"
        style="@style/TextAppearance.AppCompat.header_top"
        android:background="@color/black_overlay">

        <TextView
            android:id="@+id/header4_tv"
            style="@style/TextAppearance.AppCompat.header_text"
            android:text="@string/header_title_result"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>